--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1 class="text-center m-5" > Datos de Estado </h1>
+    <h1 class="text-center m-5"> Datos de Estado </h1>
     <div class="text-center m-5 ">
         <a href th:href="@{/new}" class="btn btn-primary btn-success">Agregar</a>
     </div>
@@ -51,4 +51,10 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
 </body>
+<footer th:fragment="footer">
+    <div class=" footer">
+        <p>&copy; 2022 - Practica 03 Grupo 02- Universidad Fidélitas</p>
+    </div>
+</footer>
+
 </html>
