--- a/src/main/resources/static/Css/estilo1.css
+++ b/src/main/resources/static/Css/estilo1.css
@@ -15,3 +15,12 @@ table, th, td {
     text-align: center;
 
 }
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: whitesmoke;
+    color: black;
+    text-align: center;
+}
